--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> this is my github</h1>
+    <h1 style="color: red;"> My foirst web page hosted on live server</h1>
     
 </body>
 </html>
