--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 style="color: red;"> My foirst web page hosted on live server</h1>
+<h2> my web page</h2>
     
 </body>
 </html>
